# rove

./: BUILD_OPTIMIZED.md  CMakeLists.txt  README.md  build_debug.sh  build_portable.sh  build_release.sh  compare_builds.sh
pyrove/: __init__.py
src/: aabb.h  bind_capsule.cc  bind_frustum.cc  bind_line.cc  bind_plane.cc  bind_ray.cc  bind_triangle.cc  matrix.cc  matrix.h  matrix_bindings.cc  obb.cc  obb.h  plane.h  python_bindings.cc  python_bindings.h  quaternion_bindings.cc  test_bresenham_supercover.cc  test_capsule.py  test_frustum.py  test_line.py  test_mat.py  test_numpy.py  test_plane.py  test_quat.py  test_ray.py  test_triangle.py  test_vec.py  triangle.h  vec.h  vec_bindings.cc
tests/: test_pyvek.py
